Add bottom row header style

--- a/index.html
+++ b/index.html
@@ -60,13 +60,17 @@
                 </div>
                 <div class="bottom-row">
                     <div class="user-info">
-                        <img
-                            src="./assets/images/morgan.jpg"
-                            alt="a man with a blonde beard wearing a black hat and sunglasses"
-                            class="image"
-                        />
-                        <p class="name">Morgan Oakley</p>
-                        <p class="nickname">@morgan</p>
+                        <div class="image-container">
+                            <img
+                                src="./assets/images/morgan.jpg"
+                                alt="a man with a blonde beard wearing a black hat and sunglasses"
+                                class="image"
+                            />
+                        </div>
+                        <div class="user-data">
+                            <p class="name">Morgan Oakley</p>
+                            <p class="nickname">@morgan</p>
+                        </div>
                     </div>
                     <div class="button-container">
                         <button class="button">New</button>
