--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <h2 class="title">Your Projects</h2>
                     <div class="card-container">
                         <div class="card">
-                            <h3 class="card-title">Super Cool Project</h3>
+                            <h3 class="card-title">Money Maker</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipiscing elit Ut et massa mi. Aliquam in
@@ -345,7 +345,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <h3 class="card-title">Super Cool Project</h3>
+                            <h3 class="card-title">Less Cool Project</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipiscing elit Ut et massa mi. Aliquam in
@@ -467,7 +467,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <h3 class="card-title">Super Cool Project</h3>
+                            <h3 class="card-title">Impossible App</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipiscing elit Ut et massa mi. Aliquam in
@@ -530,7 +530,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <h3 class="card-title">Super Cool Project</h3>
+                            <h3 class="card-title">Easy Peasy App</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipiscing elit Ut et massa mi. Aliquam in
@@ -591,7 +591,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <h3 class="card-title">Super Cool Project</h3>
+                            <h3 class="card-title">Add Blocker</h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipiscing elit Ut et massa mi. Aliquam in
