Add trending markup and style

--- a/index.html
+++ b/index.html
@@ -696,6 +696,63 @@
                     </div>
                     <div class="trending-container">
                         <h2 class="title">Trending</h2>
+                        <div class="accounts-container">
+                            <div class="account">
+                                <div class="image-container">
+                                    <img
+                                        src="./assets/images/tegan.jpg"
+                                        alt=""
+                                        class="image"
+                                    />
+                                </div>
+                                <div class="text-container">
+                                    <h3 class="title">@tegan</h3>
+                                    <p class="text">World Peace Builder</p>
+                                </div>
+                            </div>
+
+                            <div class="account">
+                                <div class="image-container">
+                                    <img
+                                        src="./assets/images/morgan.jpg"
+                                        alt=""
+                                        class="image"
+                                    />
+                                </div>
+                                <div class="text-container">
+                                    <h3 class="title">@morgan</h3>
+                                    <p class="text">Super Cool Project</p>
+                                </div>
+                            </div>
+
+                            <div class="account">
+                                <div class="image-container">
+                                    <img
+                                        src="./assets/images/kendall.jpg"
+                                        alt=""
+                                        class="image"
+                                    />
+                                </div>
+                                <div class="text-container">
+                                    <h3 class="title">@kendall</h3>
+                                    <p class="text">Life Changing App</p>
+                                </div>
+                            </div>
+
+                            <div class="account">
+                                <div class="image-container">
+                                    <img
+                                        src="./assets/images/alex.jpg"
+                                        alt=""
+                                        class="image"
+                                    />
+                                </div>
+                                <div class="text-container">
+                                    <h3 class="title">@alex</h3>
+                                    <p class="text">No Traffic Maker</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
